fix alwaysediting cell in locked row overlap
alwaysEditing cell in a locked row will be coverred by the following
rows when scrolling dow

--- a/resources/lock.css
+++ b/resources/lock.css
@@ -4,6 +4,11 @@
 	z-index: 1;
 }
 
+
+.gridxLockedRow {
+	z-index: 1;
+}
+
 /*Column Lock*/
 .gridxColumnLock .gridxRow {
 	overflow: hidden;
